--- a/Week-1/Assignment/Index.html
+++ b/Week-1/Assignment/Index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="./index.css" />
   </head>
   <body>
-    <main style="display: flex">
+    <main style="display: flex; height: 84vh;">
       <div class="sidebar">
         <i class="fa-solid fa-bars my-auto"></i>
         <i class="fa-solid fa-house-chimney my-auto"></i>
@@ -34,16 +34,75 @@
               <p>2016.Charts.100 songs</p>
             </div>
 
-            <div>
-              <button class="header-btn"><i class="fa-solid fa-play"></i> Play all</button>
-              <button class="header-btn"><i class="fa-solid fa-plus"></i> Add to</button>
-              <button class="header-btn"><i class="fa-solid fa-ellipsis"></i> More</button>
+            <div class="control-btn">
+              <button class="header-btn">
+                <i class="fa-solid fa-play"></i> Play all
+              </button>
+              <button class="header-btn">
+                <i class="fa-solid fa-plus"></i> Add to
+              </button>
+              <button class="header-btn">
+                <i class="fa-solid fa-ellipsis"></i> More
+              </button>
             </div>
           </div>
         </div>
+
+        <div style="margin-left: 20px">
+          <table class="song-table">
+            <!-- <tbody> -->
+            <tr>
+              <td>1.One Dance</td>
+              <td>Crake feat CatKid & Cyla</td>
+              <td>2:54</td>
+              <td><button class="table-btn">CATTY CLOUD SYNC</button></td>
+            </tr>
+            <tr>
+              <td>2.Panda</td>
+              <td>Cattee</td>
+              <td>4:06</td>
+              <td><button class="table-btn">CATTY CLOUD SYNC</button></td>
+            </tr>
+            <tr>
+              <td>3.Can't Stop the Feeling</td>
+              <td>Catin Cimberlakes</td>
+              <td>3:56</td>
+              <td><button class="table-btn">CATTY CLOUD SYNC</button></td>
+            </tr>
+            <tr>
+              <td>4.Work From Home</td>
+              <td>Cat Harmony feat Colla</td>
+              <td>3:34</td>
+              <td><button class="table-btn">CATTY CLOUD SYNC</button></td>
+            </tr>
+            <!-- </tbody> -->
+          </table>
+        </div>
       </div>
     </main>
-    <footer></footer>
+    <footer class="footer-side">
+      <div>
+        <img
+          class="header-img"
+          src="https://uploads.codesandbox.io/uploads/user/a8233562-b36b-483d-9de9-5a1ac148fb0c/2Eq--cattyboard.jpg"
+          alt=""
+        />
+        <div class="d-inlineblock">
+          <div>
+            <p>If It Ain't Love</p>
+            <p>Catson Derulo</p>
+          </div>
+        </div>
+      </div>
+
+      <div class="group-btn">
+        <button><i class="fa-solid fa-backward-step"></i></button>
+        <button><i class="fa-solid fa-pause"></i></button>
+        <button><i class="fa-solid fa-forward-step"></i></button>
+        <button><i class="fa-solid fa-rotate"></i></button>
+        <button><i class="fa-solid fa-arrows-repeat"></i></button>
+      </div>
+    </footer>
 
     <script
       src="https://kit.fontawesome.com/7677740565.js"
