--- a/Week-1/Assignment/Index.html
+++ b/Week-1/Assignment/Index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="./index.css" />
   </head>
   <body>
-    <main style="display: flex; height: 84vh;">
+    <main style="display: flex; height: 90vh">
       <div class="sidebar">
         <i class="fa-solid fa-bars my-auto"></i>
         <i class="fa-solid fa-house-chimney my-auto"></i>
@@ -80,19 +80,19 @@
         </div>
       </div>
     </main>
-    <footer class="footer-side">
-      <div>
+    <div class="songBox-side">
+      <div style="display: flex">
         <img
           class="header-img"
           src="https://uploads.codesandbox.io/uploads/user/a8233562-b36b-483d-9de9-5a1ac148fb0c/2Eq--cattyboard.jpg"
           alt=""
         />
-        <div class="d-inlineblock">
-          <div>
-            <p>If It Ain't Love</p>
-            <p>Catson Derulo</p>
-          </div>
+        <!-- <div class="d-inlineblock"> -->
+        <div class="song-text">
+          <p>If It Ain't Love</p>
+          <p>Catson Derulo</p>
         </div>
+        <!-- </div> -->
       </div>
 
       <div class="group-btn">
@@ -100,9 +100,9 @@
         <button><i class="fa-solid fa-pause"></i></button>
         <button><i class="fa-solid fa-forward-step"></i></button>
         <button><i class="fa-solid fa-rotate"></i></button>
-        <button><i class="fa-solid fa-arrows-repeat"></i></button>
+        <button><i class="fa-solid fa-repeat"></i></button>
       </div>
-    </footer>
+    </div>
 
     <script
       src="https://kit.fontawesome.com/7677740565.js"
