--- a/Week-1/Assignment/Index.html
+++ b/Week-1/Assignment/Index.html
@@ -10,14 +10,14 @@
   <body>
     <main style="display: flex; height: 90vh">
       <div class="sidebar">
-        <i class="fa-solid fa-bars my-auto"></i>
-        <i class="fa-solid fa-house-chimney my-auto"></i>
-        <i class="fa-solid fa-magnifying-glass my-auto"></i>
-        <i class="fa-solid fa-volume-high my-auto"></i>
-        <i class="fa-solid fa-user my-auto"></i>
-        <i class="fa-brands fa-spotify my-auto"></i>
-        <i class="fa-solid fa-gear my-auto"></i>
-        <i class="fa-brands fa-soundcloud my-auto"></i>
+        <button><i class="fa-solid fa-bars my-auto"></i></button>
+        <button><i class="fa-solid fa-house-chimney my-auto"></i></button>
+        <button><i class="fa-solid fa-magnifying-glass my-auto"></i></button>
+        <button><i class="fa-solid fa-volume-high my-auto"></i></button>
+        <button><i class="fa-solid fa-user my-auto"></i></button>
+        <button><i class="fa-brands fa-spotify my-auto"></i></button>
+        <button><i class="fa-solid fa-gear my-auto"></i></button>
+        <button><i class="fa-brands fa-soundcloud my-auto"></i></button>
       </div>
 
       <div class="content">
