create a basic design

--- a/Week-2/Assignment 2.1/index.html
+++ b/Week-2/Assignment 2.1/index.html
@@ -8,9 +8,174 @@
     <link rel="stylesheet" href="./css/index.css" />
   </head>
   <body>
-    <h1 class="text-center">
-      Loream ipsum dolor sit amet, <br />
-      consectetur adipiscing elit
-    </h1>
+    <header>
+      <h1 class="text-center">
+        Loream ipsum dolor sit amet, <br />
+        consectetur adipiscing elit
+      </h1>
+    </header>
+
+    <main class="container">
+      <div>
+        <div class="left-Side">
+          <p>
+            Lorem Ipsum is simply dummy text of the printing and typesetting
+            industry. Lorem Ipsum has been the industry's standard dummy text
+            ever since the 1500s, when an unknown printer took a galley of type
+            and scrambled it to make a type specimen book. It has survived not
+            only five centuries, but also the leap into electronic typesetting,
+            remaining essentially unchanged.
+          </p>
+
+          <div class="demoImg">
+            <img
+              src="https://webkit.org/demos/srcset/image-src.png"
+              alt="Sample img"
+              height="300px"
+              width="300px"
+            />
+          </div>
+
+          <form>
+            <label class="font-20" for="title">Title</label>
+            <input
+              class="h-24"
+              type="radio"
+              name="gender"
+              value="male"
+              required
+            />
+            <label class="font-20" for="Male">Male</label>
+            <input
+              class="h-24"
+              type="radio"
+              name="gender"
+              value="female"
+              required
+            />
+            <label class="font-20" for="Female">Female</label>
+            <input
+              class="h-24"
+              type="radio"
+              name="gender"
+              value="other"
+              required
+            />
+            <label class="font-20" for="Other">Other</label>
+
+            <div class="mt-15">
+              <label class="font-20" for="firstname">First name</label>
+              <input
+                class="h-24"
+                type="text"
+                name="firstname"
+                value=""
+                required
+              />
+            </div>
+
+            <div class="mt-15">
+              <label class="font-20" for="lastname">Last name</label>
+              <input
+                class="h-24"
+                type="text"
+                name="lastname"
+                value=""
+                required
+              />
+            </div>
+
+            <div class="mt-15">
+              <label class="font-20" for="email">Email</label>
+              <input class="h-24" type="email" name="email" value="" required />
+            </div>
+
+            <div class="mt-15">
+              <label class="font-20" for="phone">Phone number</label>
+              <input
+                class="h-24"
+                type="number"
+                name="phonenumber"
+                value=""
+                required
+              />
+            </div>
+
+            <div class="mt-15">
+              <label class="font-20" for="password">Password</label>
+              <input
+                class="h-24"
+                type="password"
+                name="password"
+                value=""
+                required
+              />
+            </div>
+
+            <div class="mt-15">
+              <label class="font-20" for="password"
+                >Confirm your Password</label
+              >
+              <input
+                class="h-24"
+                type="password"
+                name="password"
+                value=""
+                required
+              />
+            </div>
+
+            <div class="mt-15">
+              <label class="font-20" for="country">Country</label>
+              <select name="country" id="country" required>
+                <option value="india">India</option>
+                <option value="usa">U.S.A</option>
+                <option value="canada">Canada</option>
+                <option value="japan">Japan</option>
+              </select>
+            </div>
+
+            <div class="mt-15">
+              <input class="h-24 w-16" type="checkbox" name="policy" required />
+              <label class="font-20" for="policy">
+                I agree to the <a href="#">terms and conditions</a></label
+              >
+            </div>
+
+            <button class="mt-15 p-10" type="submit">Sign up</button>
+          </form>
+        </div>
+        <div class="right-Side">
+          <p>
+            Lorem Ipsum is simply dummy text of the printing and typesetting
+            industry. Lorem Ipsum has been the industry's standard dummy text
+            ever since the 1500s, when an unknown printer took a galley of type
+            and scrambled it to make a type specimen book. It has survived not
+            only five centuries, but also the leap into electronic typesetting,
+            remaining essentially unchanged.
+          </p>
+
+          <h5 class="pre-title">LOREM IPSUM DOLOR SIT</h5>
+          <p>
+            Lorem Ipsum is simply dummy text of the printing and typesetting
+            industry. Lorem Ipsum has been the industry's standard dummy text
+            ever since the 1500s, when an unknown printer took a galley of type
+            and scrambled it to make a type specimen book. It has survived not
+            only five centuries, but also the leap into electronic typesetting,
+            remaining essentially unchanged.
+          </p>
+
+          <h5 class="pre-title">LOREM IPSUM DOLOR SIT</h5>
+          <p>
+            Lorem Ipsum is simply dummy text of the printing and typesetting
+            industry. Lorem Ipsum has been the industry's standard dummy text
+            ever since the 1500s, when an unknown printer took a galley of type
+            and scrambled it to make a type specimen book. It has survived not
+            only five centuries, but also the leap into electronic typesetting,
+            remaining essentially unchanged.
+          </p>
+        </div>
+      </div>
+    </main>
   </body>
 </html>
