--- a/Week-2/Assignment 2.1/index.html
+++ b/Week-2/Assignment 2.1/index.html
@@ -16,7 +16,7 @@
     </header>
 
     <main class="container">
-      <div>
+      <div class="row">
         <div class="left-Side">
           <p>
             Lorem Ipsum is simply dummy text of the printing and typesetting
@@ -31,8 +31,8 @@
             <img
               src="https://webkit.org/demos/srcset/image-src.png"
               alt="Sample img"
-              height="300px"
-              width="300px"
+              height="160px"
+              width="160px"
             />
           </div>
 
